# transformers

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt  test_transformers.py  transformers.py
nnet/: test_transformers.py  transformers.py
nnet/loss/: set_loss.py
nnet/matchers/: hungarian_matcher.py  test_hungarian_matcher.py
nnet/networks/detr/: detr.py
nnet/networks/nlp/: chat_lite.py
nnet/networks/perceiver/: perceiver_io.py
nnet/parallel/: parallel_transformer.py  test_parallel_transformers.py
nnet/positional_encoding/: learnable_fourier_positional_encoding.py  learnable_positional_encoding.py  test_absolute_positional_encoding.py  test_learnable_fourier_positional_encoding.py  test_learnable_positional_encoding.py  test_relative_positional_encoding.py
nnet/utils/: history.py
transformers/: test_transformers.py  transformers.py
transformers/matchers/: hungarian_matcher.py  test_hungarian_matcher.py
transformers/networks/: vision_transformer.py
transformers/parallel/: parallel_transformer.py  test_parallel_transformers.py
transformers/positional_encoding/: absolute_positional_encoding.py  learnable_fourier_positional_encoding.py  learnable_positional_encoding.py  relative_positional_encoding.py  test_absolute_positional_encoding.py  test_learnable_fourier_positional_encoding.py  test_learnable_positional_encoding.py  test_relative_positional_encoding.py
transformers/utils/: boxes.py  datasets.py  history.py
transformers/variants/: parallel_transformer.py  test_parallel_transformers.py
(+10 files in other folders)
