[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'
[project]
name = 'transformers'
version = '0.1.0'
authors = [
    { name = 'William Guimont-Martin', email = 'william.guimont-martin.1@ulaval.ca' },
]
description = 'Collection easy to understand PyTorch transformer-based models'
readme = 'README.md'
requires-python = '>=3.7'
dependencies = ['numpy', 'torch', 'torchvision', 'einops', 'poutyne', 'matplotlib']
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
]
[project.optional-dependencies]
[project.urls]
'Homepage' = 'https://github.com/willGuimont/transformers'
'Bug Tracker' = 'https://github.com/willGuimont/transformers/issues'